tests/duarouter/errors/unknown_measure/errors.duarouter.chwrapper
Error: Routing algorithm 'CHWrapper' does not support weight-attribute 'blub'.
Quitting (on error).
